syntax = "proto3";

package proto.v1;
option go_package = "github.com/marcusbello/paydistro/proto/v1";

message SendPaymentReq {
  string acct_number = 1;
  string amount = 2;
}

message SendPaymentResp {
  string token = 1;
  bool status = 2;
}

service WalletService {
  rpc SendPayment(SendPaymentReq) returns (SendPaymentResp) {};
}